// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a second complete CLI run is idempotent for package.json and .npmrc 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for packages without one
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for packages without one
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 2 files in 1 package
│
│  ./
│    UPDATED    package.json
│    CREATED    .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`a second complete CLI run is idempotent for package.json and .npmrc 2`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◇  Configuration files are ready.
│
◆  No files changed
│
│  ./
│    UNCHANGED  package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures ALL mixed with an individual package through a complete CLI selection 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◼ ALL (Configure every package)│  ◼ beta/package.json◇  Which packages should be configured?
│  ALL, beta/package.json
│
◇  Configuration files are ready.
│
◆  Changed 3 files across 3 packages
│
│  alpha/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  beta/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  gamma/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures ALL through a complete CLI selection 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◼ ALL (Configure every package)◇  Which packages should be configured?
│  ALL
│
◇  Configuration files are ready.
│
◆  Changed 3 files across 3 packages
│
│  alpha/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  beta/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  gamma/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures a subset through a complete CLI selection 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ alpha/package.json│  ◼ gamma/package.json◇  Which packages should be configured?
│  alpha/package.json, gamma/package.json
│
◇  Configuration files are ready.
│
◆  Changed 2 files across 2 packages
│
│  alpha/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  gamma/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures multiple individual packages through a complete CLI selection 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ alpha/package.json│  ◼ beta/package.json│  ◼ gamma/package.json◇  Which packages should be configured?
│  alpha/package.json, beta/package.json, gamma/package.json
│
◇  Configuration files are ready.
│
◆  Changed 3 files across 3 packages
│
│  alpha/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  beta/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  gamma/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`configures one package through a complete CLI selection 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ beta/package.json◇  Which packages should be configured?
│  beta/package.json
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  beta/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`reports mixed created updated and unchanged outcomes in persistence order 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◼ ALL (Configure every package)◇  Which packages should be configured?
│  ALL
│
◆  Registry URL for packages without one
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for packages without one
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 3 files across 2 of 3 packages
│
│  alpha/
│    UNCHANGED  package.json
│    UNCHANGED  .npmrc
│
│  beta/
│    UPDATED    package.json
│    UPDATED    .npmrc
│
│  gamma/
│    UNCHANGED  package.json
│    CREATED    .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`shares one prompted registry across all packages that need one 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 3 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ◻ gamma/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◼ ALL (Configure every package)◇  Which packages should be configured?
│  ALL
│
◆  Registry URL for packages without one
│  https://registry.example.com/
└
│  h█│  ht█│  htt█│  http█│  https█│  https:█│  https:/█│  https://█│  https://p█│  https://pr█│  https://pro█│  https://prom█│  https://promp█│  https://prompt█│  https://prompte█│  https://prompted█│  https://prompted.█│  https://prompted.t█│  https://prompted.te█│  https://prompted.tes█│  https://prompted.test█│  https://prompted.test/█◇  Registry URL for packages without one
│  https://prompted.test/
│
◇  Configuration files are ready.
│
◆  Changed 5 files across 3 packages
│
│  alpha/
│    UPDATED    package.json
│    CREATED    .npmrc
│
│  beta/
│    UPDATED    package.json
│    UNCHANGED  .npmrc
│
│  gamma/
│    UPDATED    package.json
│    CREATED    .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm run install-packages                                     │
│                                                               │
│  Use this command instead of npm install.                     │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;
